Bugfix - disabled server.close() and generatePaths() as it's not neccessary

--- a/donations.html
+++ b/donations.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-        <title>Caffinated Donation Alert</title>
+        <title>Caffeinated Donation Alert</title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
         <style>
             body {
