--- a/followers.html
+++ b/followers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Caffinated Follower Alert</title>
+		<title>Caffeinated Follower Alert</title>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
 		<style>
 			body {
